Modify migration build tool webpack to vite

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FE Developer 김형석</title>
-    <link rel="stylesheet" href="./index.css" />
+    <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
-    <div class=""></div>
+    <div id="test" class="">test</div>
+    <script src="/src/index.js"></script>
   </body>
 </html>
