Add : 이력서 PC 기본 스타일 세팅

--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FE Developer 김형석</title>
+    <link rel="stylesheet" href="/src/reset.css" />
     <link rel="stylesheet" href="/src/index.css" />
   </head>
   <body>
-    <div id="test" class="">test</div>
+    <header class="header-container">헤더입니다</header>
+    <div class="main-container">
+      <main class="main-container">
+        <div class="fade-in-slide-text title-container">
+          <h1>안녕하세요</h1>
+          <h1>개발자 김형석입니다.</h1>
+        </div>
+
+        <div>
+          <div>2년차 웹 프론트엔드 엔지니어로 일하고 있습니다</div>
+          <div>UI/UX 향상에 고민하는 것을 좋아합니다.</div>
+          <div>
+            재사용성이 좋고 변화에 유연하게 대처할 수 있는 컴포넌트를 작성하기
+            위해 노력합니다.
+          </div>
+          <div>주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.</div>
+        </div>
+      </main>
+    </div>
     <script src="/src/index.js"></script>
   </body>
 </html>
