--- a/index.html
+++ b/index.html
@@ -4,19 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FE Developer 김형석</title>
-    <link rel="stylesheet" href="/src/reset.css" />
-    <link rel="stylesheet" href="/src/index.css" />
+    <link rel="stylesheet" href="/src/index.scss" />
   </head>
   <body>
     <header class="header-container">헤더입니다</header>
     <div class="main-container">
       <main class="main-container">
-        <div class="fade-in-slide-text title-container">
+        <div class="title-container">
           <h1>안녕하세요</h1>
-          <h1>개발자 김형석입니다.</h1>
+          <h1>웹 개발자 김형석입니다.</h1>
         </div>
-
-        <div>
+        <div class="title-detail-container">
           <div>2년차 웹 프론트엔드 엔지니어로 일하고 있습니다</div>
           <div>UI/UX 향상에 고민하는 것을 좋아합니다.</div>
           <div>
@@ -25,6 +23,22 @@
           </div>
           <div>주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.</div>
         </div>
+        <section class="section-container">
+          <div class="section-title">Education</div>
+          <div class="section-contents-container">
+            <div class="section-contents-title">나사렛대학교</div>
+            <div class="section-contents-detail">dd</div>
+          </div>
+        </section>
+        <section class="section-container">
+          <div class="section-title">Work Experience</div>
+        </section>
+        <section class="section-container">
+          <div class="section-title">Etc</div>
+        </section>
+        <section class="section-container">
+          <div class="section-title">Contact</div>
+        </section>
       </main>
     </div>
     <script src="/src/index.js"></script>
