Modify html layout

--- a/index.html
+++ b/index.html
@@ -7,32 +7,64 @@
     <link rel="stylesheet" href="/src/index.scss" />
   </head>
   <body>
-    <header class="header-container">헤더입니다</header>
-    <div class="main-container">
+    <header class="header-container">dd</header>
+    <div class="container">
       <main class="main-container">
-        <div class="title-container">
-          <h1>안녕하세요</h1>
-          <h1>웹 개발자 김형석입니다.</h1>
-        </div>
-        <div class="title-detail-container">
-          <div>2년차 웹 프론트엔드 엔지니어로 일하고 있습니다</div>
-          <div>UI/UX 향상에 고민하는 것을 좋아합니다.</div>
-          <div>
-            재사용성이 좋고 변화에 유연하게 대처할 수 있는 컴포넌트를 작성하기
-            위해 노력합니다.
-          </div>
-          <div>주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.</div>
-        </div>
+        <h1 class="title">
+          안녕하세요
+          <br />
+          웹 개발자 김형석입니다.
+        </h1>
+        <p class="main-paragraph">
+          2년차 웹 프론트엔드 엔지니어로 일하고 있습니다. <br />
+          UI/UX 향상에 고민하는 것을 좋아합니다. <br />
+          재사용성이 좋고 변화에 유연하게 대처할 수 있는 컴포넌트를 작성하기
+          위해 노력합니다. <br />
+          주도적으로 업무하는 환경을 선호하며, 배우는 것을 즐깁니다.
+        </p>
+
         <section class="section-container">
           <div class="section-title">Education</div>
-          <div class="section-contents-container">
-            <div class="section-contents-title">나사렛대학교</div>
-            <div class="section-contents-detail">dd</div>
-          </div>
+          <li class="section-contents-container">
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">나사렛대학교</div>
+              <div class="duration-text">2016.03 ~ 2022.02 (졸업)</div>
+            </div>
+            <ul class="section-contents-detail-container">
+              <li>IT학부 졸업</li>
+            </ul>
+          </li>
         </section>
+
         <section class="section-container">
           <div class="section-title">Work Experience</div>
+          <li class="section-contents-container">
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">잡코리아</div>
+            </div>
+            <ul class="section-contents-detail-container">
+              <li class="section-contents-detail-list">
+                <div>
+                  <div class="work-experience-detail-title">MSA 프로젝트</div>
+                  <div class="duration-text">2022.07 ~ 2023.01</div>
+                </div>
+                <ul class="work-experience-detail-content">
+                  <li>test</li>
+                  <li>test</li>
+                  <li>test</li>
+                </ul>
+              </li>
+              <li class="section-contents-detail-list">
+                <div>
+                  <div class="work-experience-detail-title">MSA 프로젝트</div>
+                  <div class="duration-text">2022.07 ~ 2023.01</div>
+                </div>
+                <div class="work-experience-detail-content">ㅇㅇㅇ</div>
+              </li>
+            </ul>
+          </li>
         </section>
+
         <section class="section-container">
           <div class="section-title">Etc</div>
         </section>
