Add marquee animation

--- a/index.html
+++ b/index.html
@@ -71,6 +71,24 @@
         <section class="section-container">
           <div class="section-title">Contact</div>
         </section>
+        <section class="section-container">
+          <div class="section-title">Skill</div>
+          <div class="test-container">
+            <div class="track">
+              <p class="skill-chip">react</p>
+              <p class="skill-chip">typescript</p>
+              <p class="skill-chip">javascript</p>
+              <p class="skill-chip">sass</p>
+              <p class="skill-chip">next.js</p>
+              <p class="skill-chip">zustand</p>
+              <p class="skill-chip">reactQuery</p>
+              <p class="skill-chip">Jest</p>
+              <p class="skill-chip">webpack</p>
+              <p class="skill-chip">vite</p>
+              <p class="skill-chip">reactTestingLibrary</p>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
     <script src="/src/index.js"></script>
