Modify : 경력 section 디자인 및 레이아웃 수정

--- a/index.html
+++ b/index.html
@@ -24,7 +24,143 @@
         </p>
 
         <section class="section-container">
-          <div class="section-title">Education</div>
+          <div class="section-title">경력</div>
+          <li class="section-contents-container">
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">
+                <img class="corp-logo" src="/src/image/jobkorea_logo.png" />
+                잡코리아
+              </div>
+              <div class="position-text">
+                Frontend Developer
+                <span class="duration-text">(2022.07 ~ 2023.11.15)</span>
+              </div>
+            </div>
+            <p class="section-contents-detail-container">
+              알바 도메인 점유율 1위 알바몬에서 프론트엔드 개발자로 근무하며,
+              마이페이지, 이력서 작성, 동영상·사진관리 등 개인서비스와 관련된
+              서비스를 만들었습니다.
+            </p>
+          </li>
+        </section>
+
+        <section class="section-container">
+          <div class="section-title">프로젝트</div>
+          <li class="section-contents-container">
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">
+                <img class="corp-logo" src="/src/image/jobkorea_logo.png" />
+                잡코리아
+              </div>
+            </div>
+            <ul class="section-contents-detail-container">
+              <li class="section-contents-detail-list">
+                <div class="work-experience-detail-title-container">
+                  <div class="work-experience-detail-title">MSA 프로젝트</div>
+                  <div class="position-text">
+                    Frontend Developer
+                    <span class="duration-text">(2022.07 ~ 2023.01)</span>
+                  </div>
+                </div>
+                <ul class="work-experience-detail-content">
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Description
+                    </h4>
+                    <div>
+                      .NET 소스를 next.js , TyepScript를 이용하여 micro service
+                      architecture 구조로 개발 진행했습니다 (Mobile,PC,WebView)
+                    </div>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      What i did
+                    </h4>
+                    <ul
+                      class="work-experience-detail-content-detail-list-container"
+                    >
+                      <li class="work-experience-detail-content-detail-list">
+                        개인서비스의 마이페이지, 이력서 보기, 동영상·사진관리,
+                        이력서 열람·스크랩 등 다수의 페이지 개발
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        기업서비스의 지원자 관리 페이지 개발
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        공통 컴포넌트, 커스텀 훅 개발
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        Jenkins 이용한 배포 경험
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Skill stack
+                    </h4>
+                    <ul class="skill-stack-container">
+                      <li>TypeScript</li>
+                      <li>Next.js</li>
+                      <li>Sass</li>
+                      <li>Yarn</li>
+                      <li>ReactQuery</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li class="section-contents-detail-list">
+                <div class="work-experience-detail-title-container">
+                  <div class="work-experience-detail-title">
+                    지도 서비스 수정 및 개발
+                  </div>
+                  <div class="duration-text">2023.01 ~ 2023.02</div>
+                </div>
+                <ul class="work-experience-detail-content">
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Description
+                    </h4>
+                    <div>
+                      내 주변기업 검색, 검색 조건 설정 페이지 수정 및 개발 진행
+                    </div>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      What i did
+                    </h4>
+                    <ul
+                      class="work-experience-detail-content-detail-list-container"
+                    >
+                      <li class="work-experience-detail-content-detail-list">
+                        외주사가 개발한 내 주변 기업 검색의 로직 수정 및 추가
+                        기능 개발
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        state 관리가 안되어 너무 많은 api 호출이 일어나서 발생한
+                        성능 이슈 개선, React Query 구문 수정으로 캐싱
+                        가능하도록 수정
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Skill stack
+                    </h4>
+                    <ul class="skill-stack-container">
+                      <li>TypeScript</li>
+                      <li>Next.js</li>
+                      <li>Sass</li>
+                      <li>ReactQuery</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+            </ul>
+          </li>
+        </section>
+
+        <section class="section-container">
+          <div class="section-title">교육</div>
           <li class="section-contents-container">
             <div class="section-contents-title-container">
               <div class="section-contents-title">나사렛대학교</div>
@@ -32,35 +168,6 @@
             </div>
             <ul class="section-contents-detail-container">
               <li>IT학부 졸업</li>
-            </ul>
-          </li>
-        </section>
-
-        <section class="section-container">
-          <div class="section-title">Work Experience</div>
-          <li class="section-contents-container">
-            <div class="section-contents-title-container">
-              <div class="section-contents-title">잡코리아</div>
-            </div>
-            <ul class="section-contents-detail-container">
-              <li class="section-contents-detail-list">
-                <div>
-                  <div class="work-experience-detail-title">MSA 프로젝트</div>
-                  <div class="duration-text">2022.07 ~ 2023.01</div>
-                </div>
-                <ul class="work-experience-detail-content">
-                  <li>test</li>
-                  <li>test</li>
-                  <li>test</li>
-                </ul>
-              </li>
-              <li class="section-contents-detail-list">
-                <div>
-                  <div class="work-experience-detail-title">MSA 프로젝트</div>
-                  <div class="duration-text">2022.07 ~ 2023.01</div>
-                </div>
-                <div class="work-experience-detail-content">ㅇㅇㅇ</div>
-              </li>
             </ul>
           </li>
         </section>
