Modify : 경력 관련 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
               </div>
             </div>
             <p class="section-contents-detail-container">
-              알바 도메인 점유율 1위 알바몬에서 프론트엔드 개발자로 근무하며,
-              마이페이지, 이력서 작성, 동영상·사진관리 등 개인서비스와 관련된
-              서비스를 만들었습니다.
+              국내 알바 도메인 점유율 1위 알바몬에서 프론트엔드 개발자로
+              근무하며, 마이페이지, 이력서 작성, 동영상·사진관리 등 개인서비스와
+              관련된 서비스를 만들었습니다.
             </p>
           </li>
         </section>
@@ -113,7 +113,10 @@
                   <div class="work-experience-detail-title">
                     지도 서비스 수정 및 개발
                   </div>
-                  <div class="duration-text">2023.01 ~ 2023.02</div>
+                  <div class="position-text">
+                    Frontend Developer
+                    <span class="duration-text">(2023.01 ~ 2023.02)</span>
+                  </div>
                 </div>
                 <ul class="work-experience-detail-content">
                   <li>
