--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
                   </li>
                 </ul>
               </li>
+
               <li class="section-contents-detail-list">
                 <div class="work-experience-detail-title-container">
                   <div class="work-experience-detail-title">
@@ -158,28 +159,181 @@
                   </li>
                 </ul>
               </li>
+
+              <li class="section-contents-detail-list">
+                <div class="work-experience-detail-title-container">
+                  <div class="work-experience-detail-title">
+                    이력서 작성 모바일 개편
+                  </div>
+                  <div class="position-text">
+                    Frontend Developer
+                    <span class="duration-text">(2023.07 ~ 2023.08)</span>
+                  </div>
+                </div>
+                <ul class="work-experience-detail-content">
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Description
+                    </h4>
+                    <div>
+                      기존의 모바일 이력서 작성 기능이 모바일 친화적이지 않아서
+                      사용자의 이력서 작성 중 이탈률이 높다고 판단, 개편을
+                      진행한 프로젝트
+                    </div>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      What i did
+                    </h4>
+                    <ul
+                      class="work-experience-detail-content-detail-list-container"
+                    >
+                      <li class="work-experience-detail-content-detail-list">
+                        기획서 및 디자인 리뷰, 의견 반영
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        Page 이동식으로 되어있던 이력서 작성을 한 페이지 및 모달
+                        사용으로 사용자로 하여금 한 페이지에서 머물고 있는
+                        것처럼 느끼도록 개발
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Skill stack
+                    </h4>
+                    <ul class="skill-stack-container">
+                      <li>TypeScript</li>
+                      <li>Next.js</li>
+                      <li>Sass</li>
+                      <li>ReactQuery</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+
+              <li class="section-contents-detail-list">
+                <div class="work-experience-detail-title-container">
+                  <div class="work-experience-detail-title">
+                    Braze 이슈 수정
+                  </div>
+                  <div class="position-text">
+                    Frontend Developer
+                    <span class="duration-text">(2023.04 ~ 2023.11)</span>
+                  </div>
+                </div>
+                <ul class="work-experience-detail-content">
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Description
+                    </h4>
+                    <div>
+                      알바몬 서비스에 부착된 Braze가 정상적으로 수집되고 있지
+                      않아서 발생하는 이슈 수정
+                    </div>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      What i did
+                    </h4>
+                    <ul
+                      class="work-experience-detail-content-detail-list-container"
+                    >
+                      <li class="work-experience-detail-content-detail-list">
+                        Braze 인스턴스 개발
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        앱 개발팀과 소통을 통해 기존에 너무 많은 호출이 일어나서
+                        유실되고 있는 오류 개선을 위해 AppBridge 구조 개선
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        기존 구 소스인 .Net 소스상 Appboy 로직 분석 및 현 소스에
+                        반영
+                      </li>
+                      <li class="work-experience-detail-content-detail-list">
+                        Braze 로그 수집 모니터링
+                      </li>
+                    </ul>
+                  </li>
+                  <li>
+                    <h4 class="work-experience-detail-content-title">
+                      Skill stack
+                    </h4>
+                    <ul class="skill-stack-container">
+                      <li>TypeScript</li>
+                      <li>Next.js</li>
+                      <li>Braze</li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
             </ul>
           </li>
         </section>
 
         <section class="section-container">
-          <div class="section-title">교육</div>
+          <div class="section-title">활동</div>
           <li class="section-contents-container">
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">
+                <img class="corp-logo" src="/src/image/axis_logo.png" />
+
+                react-multi-email
+                <a
+                  class="link-container"
+                  href="https://github.com/axisj/react-multi-email"
+                  target="_blank"
+                >
+                  <img
+                    class="github-small-logo"
+                    src="/src/image/github_logo.png"
+                  />
+                </a>
+              </div>
+            </div>
+            <ul class="section-contents-detail-container">
+              <li class="work-experience-detail-content-detail-list">
+                react-testing-library& jest를 이용하여 test code 작성
+              </li>
+              <li class="work-experience-detail-content-detail-list">
+                불필요한 로직 제거 및 성능개선
+              </li>
+              <li class="work-experience-detail-content-detail-list">
+                일부 구식으로 작성된 문법 최신 문법 형태로 개선
+              </li>
+            </ul>
+          </li>
+        </section>
+        <section class="section-container">
+          <div class="section-title">기술</div>
+        </section>
+
+        <section class="section-column-container">
+          <div class="section-title">교육</div>
+          <li>
             <div class="section-contents-title-container">
               <div class="section-contents-title">나사렛대학교</div>
               <div class="duration-text">2016.03 ~ 2022.02 (졸업)</div>
             </div>
-            <ul class="section-contents-detail-container">
-              <li>IT학부 졸업</li>
+            <ul class="section-contents-detail-column-container">
+              개발자가 되겠다는 생각이 커서 IT학부에 진학하였고 안드로이드
+              개발자가 되고 싶어서 Java와 xml을 통해 앱 개발의 꿈을 꾸다, 3학년
+              1학기에 웹 프론트엔드 개발에 관심이 생겨서 JS,HTML,React를
+              독학하였습니다.
             </ul>
           </li>
-        </section>
-
-        <section class="section-container">
-          <div class="section-title">Etc</div>
-        </section>
-        <section class="section-container">
-          <div class="section-title">Contact</div>
+          <li>
+            <div class="section-contents-title-container">
+              <div class="section-contents-title">웹 개발자 양성 과정 수료</div>
+              <div class="duration-text">2021.09.14 ~ 2022.03.15</div>
+            </div>
+            <ul class="section-contents-detail-column-container">
+              개발자가 되겠다는 생각이 커서 IT학부에 진학하였고 안드로이드
+              개발자가 되고 싶어서 Java와 xml을 통해 앱 개발의 꿈을 꾸다, 3학년
+              1학기에 웹 프론트엔드 개발에 관심이 생겨서 JS,HTML,React를
+              독학하였습니다.
+            </ul>
+          </li>
         </section>
       </main>
     </div>
