Modify : style 정리

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       </p>
 
       <section class="section-container">
+        <h2 class="section-title">경력</h2>
         <article class="card screen-animation">
           <div class="card-title-container">
             <h3 class="card-title">
